tests/asm-link/line-continuation-whitespace/rgbasm.err
error: label defined outside of a section
   ╭─[ test.asm:7:1 ]
   │
 7 │ foo: bar baz\
   │ ─┬─  
   │  ╰─── no section is active at this point
───╯
1 error generated.
